# uring_coroutine_proactor

./: .gitignore  CMakeLists.txt  Proactor+io_uring.md  Proactor与Reactor异同.md  README.md  benchmark.sh  coroutine.md  liburing.md  liburing接口文档.md  main.cpp  stress_test.sh  优化点.md  压力测试.md  压力测试结果  项目回调说明.md  项目架构说明图.excalidraw  项目模块架构与难点说明.md  顺序说明
bench/: echo_bench.cpp
client/: README.md  test_client  test_client.cpp
codec/: HttpCodec.cpp  RpcCodec.cpp  RpcCodec使用示例.md
config/: ucp.conf
include/: Acceptor.hpp  AsyncRead.hpp  AsyncWrite.hpp  Buffer.hpp  Codec.hpp  Config.hpp  Coroutine.hpp  CoroutineTask.hpp  EventLoop.hpp  EventLoopThread.hpp  EventLoopThreadPool.hpp  InetAddress.hpp  IoContext.hpp  LockFreeQueue.hpp  Logger.hpp  MemoryPool.hpp  Noncopyable.hpp  Socket.hpp  TcpConnection.hpp  TcpServer.hpp
include/codec/: HttpCodec.hpp  RpcCodec.hpp
log/: Logger.cpp
memory/: MemoryPool.cpp
recommend/: FeatureStore.hpp  RankingModel.hpp  RecommendProtocol.hpp  RecommendationHandler.hpp  recommend_client.cpp  recommend_server.cpp
src/: Acceptor.cpp  AsyncRead.cpp  AsyncWrite.cpp  Buffer.cpp  CMakeLists.txt  Config.cpp  EventLoop.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  InetAddress.cpp  Socket.cpp  TcpConnection.cpp  TcpServer.cpp  main.cpp  test.cpp
